fixed spacing on student page

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -8,7 +8,7 @@ ul {
 li {
   float: left;
   display: block;
-  text-align: center;
+  text-align: left;
   padding: 16px;
   text-decoration: none;
 }
